--- a/app/src/main/res/layout/activity_generate_pin.xml
+++ b/app/src/main/res/layout/activity_generate_pin.xml
@@ -33,6 +33,15 @@
             android:textSize="18sp"
             android:textStyle="bold" />
     </RelativeLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_margin="8dp"
+        android:padding="15dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="20dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,38 +55,42 @@
             android:text="New Pin :"
             android:textStyle="bold"
             android:textSize="18sp"
+            android:textColor="@color/gradientEnd"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             />
-        <com.goodiebag.pinview.Pinview
-            android:layout_width="wrap_content"
+
+        <com.alimuzaffar.lib.pin.PinEntryEditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            app:inputType="number"
-            android:layout_marginStart="15dp"
+            android:cursorVisible="false"
             android:id="@+id/newPin"
-            app:pinWidth="30dp"
-            android:layout_marginEnd="15dp"
-            app:pinLength="6"/>
+            app:pinLineColors="@color/gradientEnd"
+            android:digits="1234567890"
+            android:textStyle="bold"
+            android:inputType="number"
+            android:maxLength="6"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Verify Pin :"
             android:textStyle="bold"
+            android:textColor="@color/gradientEnd"
             android:textSize="18sp"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
             />
-        <com.goodiebag.pinview.Pinview
-            android:layout_width="wrap_content"
+        <com.alimuzaffar.lib.pin.PinEntryEditText
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            app:inputType="number"
-            android:layout_marginStart="15dp"
+            android:cursorVisible="false"
             android:id="@+id/verifyPin"
-            android:layout_marginEnd="15dp"
-            app:pinWidth="30dp"
-            app:pinLength="6"/>
+            android:digits="1234567890"
+            android:inputType="numberPassword"
+            android:textStyle="bold"
+            app:pinCharacterMask="*"
+            app:pinLineColors="@color/gradientEnd"
+            android:maxLength="6"/>
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/submit"
             android:layout_width="200dp"
@@ -90,11 +103,14 @@
             android:textColor="#fff"
             android:textStyle="bold" />
     </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
     <RelativeLayout
         android:id="@+id/progress_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/progressBGColor"
+        android:elevation="21dp"
         android:visibility="gone">
 
         <ProgressBar
