with added flags to intent and added some features for future implimentation

--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -26,7 +26,7 @@
         android:layout_marginTop="80dp"
         android:scaleType="fitCenter"
         android:text="DilPay"
-        android:src="@drawable/logo"
+        android:src="@drawable/dilpay_logo"
          />
 
 <!--    <TextView-->
