--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -81,7 +81,6 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/re1"
                     android:layout_marginTop="15dp">
 
 
@@ -89,26 +88,48 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
+                        android:layout_below="@id/re1"
                         android:elevation="20dp"
-                        android:paddingTop="12dp">
+                        android:paddingTop="2dp"
+                        tools:ignore="NotSibling">
 
-                        <com.google.android.material.textview.MaterialTextView
-                            android:id="@+id/t1"
-                            android:layout_width="wrap_content"
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/transport_recyclerview"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:paddingStart="15dp"
+                            android:clipToPadding="false"
+                            android:paddingEnd="15dp"
+                            android:paddingBottom="2dp" />
+
+                        <View
+                            android:id="@+id/v2"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_below="@id/transport_recyclerview"
                             android:layout_marginStart="15dp"
-                            android:layout_marginTop="15dp"
-                            android:layout_marginBottom="12dp"
-                            android:text="Recharge &amp; Bill Payment"
-                            android:textColor="#000"
-                            android:textStyle="bold" />
+                            android:layout_marginTop="8dp"
+                            android:layout_marginEnd="15dp"
+                            android:layout_marginBottom="3dp"
+                            android:background="#33000000" />
+
+                        <!--                        <com.google.android.material.textview.MaterialTextView-->
+                        <!--                            android:id="@+id/t1"-->
+                        <!--                            android:layout_width="wrap_content"-->
+                        <!--                            android:layout_height="wrap_content"-->
+                        <!--                            android:layout_marginStart="15dp"-->
+                        <!--                            android:layout_marginTop="15dp"-->
+                        <!--                            android:layout_marginBottom="12dp"-->
+                        <!--                            android:text="Recharge &amp; Bill Payment"-->
+                        <!--                            android:textColor="#000"-->
+                        <!--                            android:textStyle="bold" />-->
 
 
                         <androidx.recyclerview.widget.RecyclerView
                             android:id="@+id/recyclerview_dashboard"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/t1"
+                            android:layout_below="@id/v2"
                             android:clipToPadding="false"
                             android:paddingStart="15dp"
                             android:paddingEnd="15dp"
@@ -145,13 +166,12 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:orientation="horizontal"
-                                >
-<!--                                <ImageView-->
-<!--                                    android:layout_width="220dp"-->
-<!--                                    android:layout_height="match_parent"-->
-<!--                                    android:src="@drawable/cardtest"-->
-<!--                                    />-->
+                                android:orientation="horizontal">
+                                <!--                                <ImageView-->
+                                <!--                                    android:layout_width="220dp"-->
+                                <!--                                    android:layout_height="match_parent"-->
+                                <!--                                    android:src="@drawable/cardtest"-->
+                                <!--                                    />-->
 
                                 <com.google.android.material.card.MaterialCardView
                                     android:id="@+id/card1"
@@ -200,8 +220,8 @@
                                     <LinearLayout
                                         android:layout_width="200dp"
                                         android:layout_height="wrap_content"
-                                        android:padding="5dp"
-                                        android:orientation="vertical">
+                                        android:orientation="vertical"
+                                        android:padding="5dp">
 
                                         <TextView
                                             android:layout_width="wrap_content"
@@ -233,8 +253,8 @@
                                     <LinearLayout
                                         android:layout_width="200dp"
                                         android:layout_height="wrap_content"
-                                        android:padding="5dp"
-                                        android:orientation="vertical">
+                                        android:orientation="vertical"
+                                        android:padding="5dp">
 
                                         <TextView
                                             android:layout_width="wrap_content"
@@ -266,8 +286,8 @@
                                     <LinearLayout
                                         android:layout_width="200dp"
                                         android:layout_height="wrap_content"
-                                        android:padding="5dp"
-                                        android:orientation="vertical">
+                                        android:orientation="vertical"
+                                        android:padding="5dp">
 
                                         <TextView
                                             android:layout_width="wrap_content"
