--- a/app/src/main/res/layout/activity_recharge_history.xml
+++ b/app/src/main/res/layout/activity_recharge_history.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pattern"
     tools:context=".Recharge_history">
     <RelativeLayout
         android:id="@+id/re1"
