--- a/app/src/main/res/layout/activity_security_pin.xml
+++ b/app/src/main/res/layout/activity_security_pin.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/pattern"
     tools:context=".Security.SecurityPin">
 
     <RelativeLayout
@@ -53,6 +54,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/righteous_regular"
                 android:padding="10dp"
+                android:textSize="16sp"
                 android:text="Enter your security pin"
                 android:textColor="@color/gradientEnd"
                 android:textStyle="bold" />
@@ -67,24 +69,34 @@
                 android:digits="1234567890"
                 android:inputType="numberPassword"
                 android:maxLength="6"
-                android:paddingStart="20dp"
-                android:paddingEnd="20dp"
+                android:paddingStart="40dp"
+                android:paddingEnd="40dp"
                 android:textStyle="bold"
                 app:pinCharacterMask="*"
                 android:focusable="true"
                 app:pinLineColors="@color/gradientEnd" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forgot pin / Not generated yet."
+                android:layout_below="@id/pin"
+                android:id="@+id/LabelGeneratePin"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15dp"
+                android:textSize="14sp"
+                />
 
             <TextView
                 android:id="@+id/generate_pin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/pin"
+                android:layout_below="@id/LabelGeneratePin"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:padding="10dp"
+                android:padding="2dp"
                 android:text="Generate Pin"
+                android:fontFamily="@font/righteous_regular"
                 android:textColor="@color/textColor"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="normal" />
 
             <TextView
@@ -191,5 +203,19 @@
     <!--            android:textSize="20sp"-->
     <!--            android:textStyle="bold" />-->
     <!--    </LinearLayout>-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:elevation="21dp"
+        android:visibility="gone"
+        android:id="@+id/progress"
+        >
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            />
+    </RelativeLayout>
 
 </RelativeLayout>
